# freight

./: README.md
crates/manifest/grammar/: toml.pest
crates/manifest/tests/: toml.io.toml
template/crates/common/: CHANGELOG.md
template/crates/lib/: Cargo.toml
template/workspace/: CONTRIBUTING.md  Cargo.toml  README.md  freight.toml  rustfmt.toml
