[workspace]
resolver = "2"
members = []

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
license = "MIT OR Apache-2.0"
exclude = ["benches/", "tests/"]
authors = []
repository = ""

[workspace.dependencies]
# workspace dependenices

# external dependencies

# dev dependencies
